recyclerview UI 변경

--- a/app/src/main/res/layout/content_rv_item.xml
+++ b/app/src/main/res/layout/content_rv_item.xml
@@ -24,6 +24,8 @@
     <ImageView
         android:id="@+id/bookmarkArea"
         android:src="@drawable/bookmark_white"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
         android:layout_width="30dp"
         android:layout_height="30dp"/>
 
