--- a/app/src/main/res/layout/board_list_item.xml
+++ b/app/src/main/res/layout/board_list_item.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/titleArea"
         android:text="title"
         android:textSize="20sp"
         android:textColor="@color/black"
@@ -15,6 +16,7 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:id="@+id/contentArea"
         android:text="content"
         android:textSize="15sp"
         android:textColor="@color/black"
@@ -24,6 +26,7 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:id="@+id/timeArea"
         android:text="time"
         android:textSize="10sp"
         android:textColor="#999999"
