--- a/app/src/main/res/layout/activity_board_write.xml
+++ b/app/src/main/res/layout/activity_board_write.xml
@@ -70,6 +70,7 @@
             android:background="#000000"/>
 
         <ImageView
+            android:id="@+id/imageArea"
             android:src="@drawable/plusbtn"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
