--- a/app/src/main/res/layout/activity_board_inside.xml
+++ b/app/src/main/res/layout/activity_board_inside.xml
@@ -52,6 +52,12 @@
             android:background="@drawable/background_radius"
             android:textColor="@color/black"/>
 
+        <ImageView
+            android:id="@+id/getImageArea"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_margin="30dp"/>
+
     </LinearLayout>
 
 </layout>
