댓글 불러오기 기능 및 UI 구현

--- a/app/src/main/res/layout/activity_board_inside.xml
+++ b/app/src/main/res/layout/activity_board_inside.xml
@@ -88,9 +88,9 @@
                     />
 
                 <ListView
+                    android:id="@+id/commentLV"
                     android:layout_width="match_parent"
-                    android:layout_height="600dp"
-                    android:background="#999999"/>
+                    android:layout_height="600dp" />
 
             </LinearLayout>
 
