--- a/app/src/main/res/layout/content_rv_item.xml
+++ b/app/src/main/res/layout/content_rv_item.xml
@@ -3,22 +3,38 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageArea"
-        android:src="@drawable/main_icon_oneroom"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"/>
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp">
+
+        <ImageView
+            android:id="@+id/imageArea"
+            android:src="@drawable/main_icon_oneroom"
+            android:scaleType="fitXY"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"/>
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/textArea"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Text Area"
         android:textSize="15sp"
-        android:textStyle="bold"
+        android:textColor="@color/black"
         />
 
     <ImageView
@@ -26,7 +42,7 @@
         android:src="@drawable/bookmark_white"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
-        android:layout_width="30dp"
-        android:layout_height="30dp"/>
+        android:layout_width="20dp"
+        android:layout_height="20dp"/>
 
 </LinearLayout>
