--- a/app/src/main/res/layout/fragment_tip.xml
+++ b/app/src/main/res/layout/fragment_tip.xml
@@ -51,21 +51,21 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:text="category"
+                        android:text="전체"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:layout_weight="1"/>
 
                     <TextView
-                        android:text="category"
+                        android:text="요리"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:layout_weight="1"/>
 
                     <TextView
-                        android:text="category"
+                        android:text="경제"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -102,21 +102,21 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:text="category"
+                        android:text="기타"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:layout_weight="1"/>
 
                     <TextView
-                        android:text="category"
+                        android:text="취미"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:layout_weight="1"/>
 
                     <TextView
-                        android:text="category"
+                        android:text="가구"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -152,14 +152,14 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:text="category"
+                        android:text="생활"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:layout_weight="1"/>
 
                     <TextView
-                        android:text="category"
+                        android:text="자취"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
